[bug] fixes cafeList title and info spacing

--- a/style/style.css
+++ b/style/style.css
@@ -137,7 +137,7 @@ body {
   margin: 10px 10%;
   background-color: rgba(255,255,255,.75);
   box-shadow: 2px 2px 2px lightgrey;
-  max-width: 600px;
+  max-width: 100%;
   border-radius: 3px;
 }
 
@@ -165,13 +165,13 @@ body {
   padding-top: 5px;
   margin-top: 2px;
   margin-left: 5px;
-  width: 400px;
+  width: 100%;
   height: 100%;
 }
 
 .coffeeShopName {
   float: left;
-  margin-top: 2px;
+  margin-top: 5px;
   font-weight: 300;
   font-size: 1.2em;
   width: 150px;
@@ -180,7 +180,7 @@ body {
 
 .coffeeShopAddress {
   float: left;
-  margin-top: -5px;
+  margin-top: 5px;
   line-height: normal;
   font-size: .8em;
   width: 150px;
